<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/prev_schedule"
        android:enabled="true"
        android:title="@string/prev"
        android:icon="@drawable/ic_throphy"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/next_schedule"
        android:enabled="true"
        android:icon="@drawable/ic_calendar"
        android:title="@string/next"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favorite"
        android:enabled="true"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />
</menu>