<resources>
    <string name="app_name">Football Apps</string>
    <string name="vs_string">VS</string>
    <string name="goal_string">Goals</string>
    <string name="shot_string">Shots</string>
    <string name="line_string">Lineups</string>
    <string name="gk_string">Goal Keeper</string>
    <string name="def_string">Defenses</string>
    <string name="mid_string">Midfield</string>
    <string name="fwd_string">Forward</string>
    <string name="sub_string">Substitutes</string>
    <string name="teams">Teams</string>
    <string name="favorites">Favorites</string>
    <string name="prev">Prev Sched</string>
    <string name="next">Next Sched</string>
    <string name="weight">Weight(Kg)</string>
    <string name="height">Height(M)</string>
    <string name="matches">Matches</string>
    <string name="search_title">Search</string>
</resources>
